@@ -29,8 +29,8 @@ namespace cache {
 struct CUPT_API Relation
 {
  private:
-	CUPT_LOCAL bool __parse_versioned_info(string::const_iterator, string::const_iterator);
-	CUPT_LOCAL void __init(string::const_iterator, string::const_iterator);
+	CUPT_LOCAL bool __parse_versioned_info(const char*, const char*);
+	CUPT_LOCAL void __init(const char*, const char*);
  public:
 	/// %relation type
 	struct Types
@@ -49,7 +49,7 @@ struct CUPT_API Relation
 	 * Parses @a input and constructs Relation from it.
 	 * @param input pair of begin iterator and end iterator of stringified relation
 	 */
-	explicit Relation(pair< string::const_iterator, string::const_iterator > input);
+	explicit Relation(pair< const char*, const char* > input);
 	Relation(Relation&&) = default;
 	Relation(const Relation&) = default;
 	Relation& operator=(Relation&&) = default;
@@ -79,7 +79,7 @@ struct CUPT_API Relation
 struct CUPT_API ArchitecturedRelation: public Relation
 {
  private:
-	CUPT_LOCAL void __init(string::const_iterator, string::const_iterator);
+	CUPT_LOCAL void __init(const char*, const char*);
  public:
 	/// architecture filters
 	vector< string > architectureFilters;
@@ -90,7 +90,7 @@ struct CUPT_API ArchitecturedRelation: public Relation
 	 * @param input pair of begin iterator and end iterator of stringified
 	 * architectured relation
 	 */
-	explicit ArchitecturedRelation(pair< string::const_iterator, string::const_iterator > input);
+	explicit ArchitecturedRelation(pair< const char*, const char* > input);
 	ArchitecturedRelation(ArchitecturedRelation&&) = default;
 	ArchitecturedRelation(const ArchitecturedRelation&) = default;
 	ArchitecturedRelation& operator=(ArchitecturedRelation&&) = default;
@@ -102,7 +102,7 @@ struct CUPT_API ArchitecturedRelation: public Relation
 struct CUPT_API RelationExpression: public vector< Relation >
 {
  private:
-	CUPT_LOCAL void __init(string::const_iterator, string::const_iterator);
+	CUPT_LOCAL void __init(const char*, const char*);
  public:
 	/// gets the string representation
 	string toString() const;
@@ -123,7 +123,7 @@ struct CUPT_API RelationExpression: public vector< Relation >
 	 * @param input pair of begin iterator and end iterator of string
 	 * representation
 	 */
-	explicit RelationExpression(pair< string::const_iterator, string::const_iterator > input);
+	explicit RelationExpression(pair< const char*, const char* > input);
 	RelationExpression(RelationExpression&&) = default;
 	RelationExpression(const RelationExpression&) = default;
 	RelationExpression& operator=(RelationExpression&&) = default;
@@ -136,7 +136,7 @@ struct CUPT_API RelationExpression: public vector< Relation >
 struct CUPT_API ArchitecturedRelationExpression: public vector< ArchitecturedRelation >
 {
  private:
-	CUPT_LOCAL void __init(string::const_iterator, string::const_iterator);
+	CUPT_LOCAL void __init(const char*, const char*);
  public:
 	/// gets the string representation
 	string toString() const;
@@ -155,7 +155,7 @@ struct CUPT_API ArchitecturedRelationExpression: public vector< ArchitecturedRel
 	 * @param input pair of begin iterator and end iterator of string
 	 * representation
 	 */
-	explicit ArchitecturedRelationExpression(pair< string::const_iterator, string::const_iterator > input);
+	explicit ArchitecturedRelationExpression(pair< const char*, const char* > input);
 	ArchitecturedRelationExpression(ArchitecturedRelationExpression&&) = default;
 	ArchitecturedRelationExpression(const ArchitecturedRelationExpression&) = default;
 	ArchitecturedRelationExpression& operator=(ArchitecturedRelationExpression&&) = default;
@@ -168,7 +168,7 @@ struct CUPT_API ArchitecturedRelationExpression: public vector< ArchitecturedRel
 struct CUPT_API RelationLine: public vector< RelationExpression >
 {
  private:
-	CUPT_LOCAL void __init(string::const_iterator, string::const_iterator);
+	CUPT_LOCAL void __init(const char*, const char*);
  public:
 	/// gets the string representation
 	string toString() const;
@@ -187,7 +187,7 @@ struct CUPT_API RelationLine: public vector< RelationExpression >
 	 * @param input pair of begin iterator and end iterator of string
 	 * representation
 	 */
-	explicit RelationLine(pair< string::const_iterator, string::const_iterator > input);
+	explicit RelationLine(pair< const char*, const char* > input);
 	RelationLine(RelationLine&&) = default;
 	RelationLine(const RelationLine&) = default;
 	RelationLine& operator=(RelationLine&&) = default;
@@ -200,7 +200,7 @@ struct CUPT_API RelationLine: public vector< RelationExpression >
 struct CUPT_API ArchitecturedRelationLine: public vector< ArchitecturedRelationExpression >
 {
  private:
-	CUPT_LOCAL void __init(string::const_iterator, string::const_iterator);
+	CUPT_LOCAL void __init(const char*, const char*);
  public:
 	/// gets the string representation
 	string toString() const;
@@ -219,7 +219,7 @@ struct CUPT_API ArchitecturedRelationLine: public vector< ArchitecturedRelationE
 	 * @param input pair of begin iterator and end iterator of string
 	 * representation
 	 */
-	explicit ArchitecturedRelationLine(pair< string::const_iterator, string::const_iterator > input);
+	explicit ArchitecturedRelationLine(pair< const char*, const char* > input);
 	ArchitecturedRelationLine(ArchitecturedRelationLine&&) = default;
 	ArchitecturedRelationLine(const ArchitecturedRelationLine&) = default;
 	ArchitecturedRelationLine& operator=(ArchitecturedRelationLine&&) = default;
